--- a/_config.yml
+++ b/_config.yml
@@ -6,22 +6,22 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Yummy Theme # ex. I m Chuan
-name: Your Name # ex. DONGChuan
-email: my_email_address@lalala.com
+title: liuwey的博客 # ex. I m Chuan
+name: liuwey # ex. DONGChuan
+email: 152722388@qq.com
 location: My location # ex. Nice, France
-company: MyCompany
+company: China
 company_url: my_company_website
-github_url: my_github_url # ex. https://github.com/DONGChuan
-github_username: # ex. DONGChuan
-description: description_of_your_web_site
+github_url: https://github.com/loveliting # ex. https://github.com/DONGChuan
+github_username: loveliting
+description: test blog
 favicon: favicon.png # Image must be in assets/images
-repository: github_username/github_username.github.io # ex. DONGChuan/DONGChuan.github.io
+repository: loveliting/loveliting.github.io # ex. DONGChuan/DONGChuan.github.io
 
 # The base hostname & protocol for your site
 # For local test, please use http://localhost:4000
 # For production, use your github page url. ex. http://dongchuan.github.io
-url: http://localhost:4000
+url: http://www.loveliting.com
 
 ## Gem
 gems:
